--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Recipe App</title>
+
+  <!-- Link to main CSS file -->
   <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
+
+  <!-- This is where each page's content will be injected -->
   {{{body}}}
+
 </body>
 </html>
