--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,6 @@
 <h1>{{user.name}}'s Profile</h1>
 
+<!-- List user's own recipes -->
 <h3>Your Recipes</h3>
 <ul>
   {{#each user.recipes}}
@@ -7,6 +8,7 @@
   {{/each}}
 </ul>
 
+<!-- List user's favorited recipes -->
 <h3>Favorites</h3>
 <ul>
   {{#each user.favorites}}
@@ -14,4 +16,5 @@
   {{/each}}
 </ul>
 
+<!-- Back to homepage -->
 <a href="/">← Back to Home</a>
